# toakuai

./: .gitignore  Cargo.toml
priv/: schema.sql
src/: getreq.rs  main.rs  paths.rs  reqs.rs  sql.rs
src/types/: comment.rs  mod.rs  user.rs  vote.rs  word.rs
src/web/: index.html
