[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = "0.1.8"
warp = { version = "0.3.2", features = ["tls"] }
serde = {  version = "1.0.137", features = ["derive"] }
